deployments/gatus/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gatus
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - gatus.erpf.de

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gatus
spec:
  hosts:
    - gatus.erpf.de
  gateways:
    - gatus
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 80
          host: gatus
