deployments/gatus/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gatus
spec:
  hosts:
    - gatus.erpf.de
  gateways:
    - gatus
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 80
          host: gatus
